# studyMate

./: CLAUDE.md  CLAUDE_CODE_UI_INSTRUCTIONS.md  README.md
backend/: .gitignore  config.py  main.py  pyproject.toml
backend/agent/: __init__.py  compare_agent.py
backend/services/: ai.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: MessageContent.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/lib/: api.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
