[project]
name = "studybuddy-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    # Avoid fastapi[standard] on Render: it pulls rignore (Rust/maturin) which
    # fails with read-only cargo cache. FastAPI + uvicorn[standard] is enough.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.0",
]
